[workspace]
members = [
    "freertos-riscv-ram"
]
resolver = "2"

[workspace.package]
authors = [
    "David Cuthbert <dacut@kanga.org>",
]
edition = "2021"
homepage = "https://github.com/dacut/pine64-bl602-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dacut/pine64-bl602-rs.git"
version = "0.1.2+1.6.11-1-g66bb28da"
